foundation_cms/static/scss/pages/expert_directory_page.scss
@use "sass:map";
@use "sass:math";
@import "../redesign_base";
@import "../components/pagination";

body.template-expert-directory-page {
  %card-visual-base {
    width: 100%;
    aspect-ratio: math.div(2, 3);
    margin-bottom: rem-calc(12);
    overflow: hidden;
  }

  .expert-directory {
    &__title {
      margin: rem-calc(36) 0 rem-calc(22);
    }

    &__description {
      @include mofo-text-style($lede-text-styles, "regular", $body-font-family);

      margin-bottom: rem-calc(58);
    }

    &__grid {
      display: grid;
      grid-template-columns: 1fr 1fr;
      gap: rem-calc(24) rem-calc(16);

      @include breakpoint(large up) {
        gap: rem-calc(16);
      }

      .expert-card {
        order: 3;

        &:first-child {
          order: 1;
        }
      }

      .featured-topics-card {
        order: 2;
      }

      @include breakpoint(large up) {
        grid-template-columns: repeat(4, 1fr);
        gap: 2rem;

        .expert-card,
        .expert-card:first-child,
        .featured-topics-card {
          order: unset;
        }
      }
    }
  }

  .expert-card {
    flex: 1;
    position: relative;

    &__image-wrapper {
      @extend %card-visual-base;

      display: block;

      picture {
        display: contents;
      }

      img {
        display: block;
        width: 100%;
        object-fit: cover;
        transition: transform 0.5s ease;
      }

      &:hover {
        img {
          transform: scale($image-hover-scale);
        }
      }
    }

    &__name {
      @include mofo-text-style($header-styles, "h5", $header-font-family);

      margin: 0 0 rem-calc(4);

      @include breakpoint(large up) {
        margin-bottom: rem-calc(8);
      }

      a {
        text-decoration: none;
        color: $black;

        &:hover {
          text-decoration: underline;
        }
      }
    }

    &__role {
      @include mofo-text-style($body-text-styles, "small");

      margin: 0;
    }

    &__topics {
      margin-top: 0.5rem;

      @include breakpoint(large up) {
        margin-top: 1rem;
      }
    }

    &__topics-list {
      display: flex;
      flex-wrap: wrap;
      gap: rem-calc(4);
      list-style: none;
      padding: 0;
      margin: 0;
      align-items: center;
    }

    &__topics-item--extra {
      display: none;

      .expert-card__topics--expanded & {
        display: inline-flex;
      }
    }

    &__topics-toggle-item {
      .expert-card__topics--expanded & {
        order: 999;
      }
    }

    &__topics-toggle {
      background: none;
      border: none;
      cursor: pointer;
      padding: 0;

      &::before {
        content: "";
        display: inline-block;
        width: rem-calc(24);
        height: rem-calc(24);
        background: url("/static/foundation_cms/_images/icons/plus.svg")
          no-repeat center / contain;
        vertical-align: middle;
      }

      .expert-card__topics--expanded &::before {
        background-image: url("/static/foundation_cms/_images/icons/minus.svg");
      }
    }
  }

  .featured-topics-card {
    &__inner {
      @extend %card-visual-base;

      background: color(yellow, "100");
      border-bottom-right-radius: rem-calc(48);
      padding: rem-calc(8);

      @include breakpoint(large up) {
        border-bottom-right-radius: rem-calc(80);
        padding: rem-calc(24);
      }
    }

    &__label {
      @include mofo-text-style($label-text-styles, "regular");

      text-transform: uppercase;
    }

    &__list {
      display: flex;
      flex-direction: column;
      padding-left: 0;
      gap: rem-calc(8);
    }

    &__item {
      list-style: none;

      &:nth-child(n + 5) {
        @include breakpoint(small only) {
          display: none;
        }
      }
    }

    &__link {
      @include cta-link(map.get($cta-link-icon-sizes, regular), "regular");

      @include breakpoint(large up) {
        @include cta-link(map.get($cta-link-icon-sizes, large), "xlarge");

        padding: rem-calc(4) 0;
      }
    }
  }

  .pagination {
    margin-top: 3rem;

    @include breakpoint(medium up) {
      margin: rem-calc(64) 0;
    }
  }
}

